# TradingAgents

./: .env.example  .gitignore  CONCURRENT_EXECUTION.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  tools_testing.ipynb  verify_concurrent_execution.py
.claude/commands/: backtest-hypothesis.md  iterate.md  research-and-backtest.md  research-strategy.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: daily-discovery.yml  iterate.yml  research-strategy.yml
.streamlit/: config.toml
cli/: main.py  utils.py
data/: tickers.txt
data/discovery_events/: 2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json
data/ml/: metrics.json  tabpfn_model.pkl
data/ohlcv_cache/: 4b4af49bae59.meta.json  7f0ec656e460.meta.json  d3b1263fabb1.meta.json
data/recommendations/: 2026-01-25.json  2026-01-26.json  2026-01-27.json  2026-01-28.json  (+42 more)
scripts/: analyze_backtest_picks.py  analyze_insider_transactions.py  backtest_scanners.py  build_historical_memories.py  build_ml_dataset.py  build_strategy_specific_memories.py  confluence_analysis.py  estimate_signal_frequency.py  fetch_quantpedia_strategies.py  install_git_hooks.sh  run_daily_discovery.py  run_hypothesis_runner.py  scan_reddit_dd.py  track_recommendation_performance.py  train_ml_model.py  update_delisted_tickers.sh  update_positions.py  update_ticker_database.py
tests/: conftest.py  quick_ticker_test.py  test_concurrent_scanners.py  test_config.py  test_discovery_refactor.py  test_sec_13f_refactor.py  verify_refactor.py
tradingagents/: __init__.py  config.py  default_config.py
(+224 files in other folders)
